--- a/doc/xdd/Проверка-таблиц-и-табличных-документов.MD
+++ b/doc/xdd/Проверка-таблиц-и-табличных-документов.MD
@@ -19,3 +19,18 @@
 - `ПроверитьРавенствоТабличныхДокументовТолькоПоЗначениям( ТаблицаОжиданий, ТаблицаРезультатов, ФлагУчитыватьТолькоВидимыеКолонкиИлиДопСообщениеОшибки = Истина, Знач ДопСообщениеОшибки = "" )`
   - Параметры:
     - **ФлагУчитыватьТолькоВидимыеКолонкиИлиДопСообщениеОшибки**- если строка, то используется как строка с ожидаемым исключением. Иначе это флаг/булево для учета только видимых колонок
+
+- `ПроверитьРавенствоТабличныхДокументовТолькоПоЗначениям( ТаблицаОжиданий, ТаблицаРезультатов,  ЭлементыПроверить = Неопределено)`
+  - Параметры:
+    - **ЭлементыПроверить**- Массив элементов для проверки. Если не заполнен, то проверка идет только по значениям как и ПроверитьРавенствоТабличныхДокументовТолькоПоЗначениям.
+   
+```bsl
+ЭлементыПроверить = Новый Массив;   
+// по значению
+ЭлементыПроверить.Добавить("Текст");
+// оформление
+ЭлементыПроверить.Добавить("РазмещениеТекста");
+ЭлементыПроверить.Добавить("ЦветФона");
+ЭлементыПроверить.Добавить("ЦветТекста");
+ЭлементыПроверить.Добавить("Шрифт");
+```
